src/Antlr/antlr/TotalPearParser.py
# Generated from TotalPear.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TotalPearParser ( Parser ):

    grammarFileName = "TotalPear.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "';'", "'+'", "'-'", "'*'", "'/'", 
                     "'^'", "'('", "')'", "'or'", "'and'", "'not'", "'|'", 
                     "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'print'", 
                     "','", "'while'", "'{'", "'}'", "'for'", "'do'", "'flagIf'", 
                     "'['", "']'", "':'", "'#'", "'if'", "'elif'", "'else'", 
                     "'switch'", "'case'", "'default'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STRING", "COMMENT", "INPUT_TYPE", 
                      "BOOL", "TYPE", "IDENTIFIER", "LETTER_FOR_IDENT", 
                      "UNSIGNED_INTEGER", "UNSIGNED_FLOAT", "DIGIT_STRING", 
                      "DIGIT", "LETTER", "WS", "CHAR_SYMBOL", "NEW_LINE" ]

    RULE_program = 0
    RULE_statementList = 1
    RULE_statementLine = 2
    RULE_statementLocal = 3
    RULE_initDeclare = 4
    RULE_expression = 5
    RULE_mathPolynomial = 6
    RULE_mathMonomial = 7
    RULE_mathPrimary1 = 8
    RULE_mathPrimary2 = 9
    RULE_mathPrimary3 = 10
    RULE_logicalExpression = 11
    RULE_logical2 = 12
    RULE_logical3 = 13
    RULE_logical4 = 14
    RULE_comparison = 15
    RULE_assign = 16
    RULE_assignStatement = 17
    RULE_print = 18
    RULE_printList = 19
    RULE_printable = 20
    RULE_inputStatement = 21
    RULE_cycleWhile = 22
    RULE_body = 23
    RULE_cycleFor = 24
    RULE_cycleDo = 25
    RULE_conditionalFlags = 26
    RULE_flagList = 27
    RULE_flagDeclare = 28
    RULE_flag = 29
    RULE_flagBody = 30
    RULE_conditionalIf = 31
    RULE_elif = 32
    RULE_else = 33
    RULE_conditionalSwitch = 34
    RULE_case = 35
    RULE_default = 36
    RULE_inputType = 37
    RULE_bool = 38
    RULE_type = 39
    RULE_uint = 40
    RULE_ufloat = 41

    ruleNames =  [ "program", "statementList", "statementLine", "statementLocal", 
                   "initDeclare", "expression", "mathPolynomial", "mathMonomial", 
                   "mathPrimary1", "mathPrimary2", "mathPrimary3", "logicalExpression", 
                   "logical2", "logical3", "logical4", "comparison", "assign", 
                   "assignStatement", "print", "printList", "printable", 
                   "inputStatement", "cycleWhile", "body", "cycleFor", "cycleDo", 
                   "conditionalFlags", "flagList", "flagDeclare", "flag", 
                   "flagBody", "conditionalIf", "elif", "else", "conditionalSwitch", 
                   "case", "default", "inputType", "bool", "type", "uint", 
                   "ufloat" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    STRING=38
    COMMENT=39
    INPUT_TYPE=40
    BOOL=41
    TYPE=42
    IDENTIFIER=43
    LETTER_FOR_IDENT=44
    UNSIGNED_INTEGER=45
    UNSIGNED_FLOAT=46
    DIGIT_STRING=47
    DIGIT=48
    LETTER=49
    WS=50
    CHAR_SYMBOL=51
    NEW_LINE=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(TotalPearParser.StatementListContext,0)


        def EOF(self):
            return self.getToken(TotalPearParser.EOF, 0)

        def getRuleIndex(self):
            return TotalPearParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = TotalPearParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.statementList()
            self.state = 85
            self.match(TotalPearParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TotalPearParser.StatementLineContext)
            else:
                return self.getTypedRuleContext(TotalPearParser.StatementLineContext,i)


        def getRuleIndex(self):
            return TotalPearParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)




    def statementList(self):

        localctx = TotalPearParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.statementLine()
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 13233034362880) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initDeclare(self):
            return self.getTypedRuleContext(TotalPearParser.InitDeclareContext,0)


        def statementLocal(self):
            return self.getTypedRuleContext(TotalPearParser.StatementLocalContext,0)


        def getRuleIndex(self):
            return TotalPearParser.RULE_statementLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementLine" ):
                listener.enterStatementLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementLine" ):
                listener.exitStatementLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementLine" ):
                return visitor.visitStatementLine(self)
            else:
                return visitor.visitChildren(self)




    def statementLine(self):

        localctx = TotalPearParser.StatementLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statementLine)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.initDeclare()
                pass
            elif token in [20, 22, 25, 26, 27, 32, 35, 43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.statementLocal()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementLocalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(TotalPearParser.AssignContext,0)


        def print_(self):
            return self.getTypedRuleContext(TotalPearParser.PrintContext,0)


        def cycleDo(self):
            return self.getTypedRuleContext(TotalPearParser.CycleDoContext,0)


        def cycleWhile(self):
            return self.getTypedRuleContext(TotalPearParser.CycleWhileContext,0)


        def cycleFor(self):
            return self.getTypedRuleContext(TotalPearParser.CycleForContext,0)


        def conditionalIf(self):
            return self.getTypedRuleContext(TotalPearParser.ConditionalIfContext,0)


        def conditionalFlags(self):
            return self.getTypedRuleContext(TotalPearParser.ConditionalFlagsContext,0)


        def conditionalSwitch(self):
            return self.getTypedRuleContext(TotalPearParser.ConditionalSwitchContext,0)


        def getRuleIndex(self):
            return TotalPearParser.RULE_statementLocal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementLocal" ):
                listener.enterStatementLocal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementLocal" ):
                listener.exitStatementLocal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementLocal" ):
                return visitor.visitStatementLocal(self)
            else:
                return visitor.visitChildren(self)




    def statementLocal(self):

        localctx = TotalPearParser.StatementLocalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statementLocal)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [43]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.assign()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.print_()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.cycleDo()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.cycleWhile()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 5)
                self.state = 100
                self.cycleFor()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 6)
                self.state = 101
                self.conditionalIf()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 7)
                self.state = 102
                self.conditionalFlags()
                pass
            elif token in [35]:
                self.enterOuterAlt(localctx, 8)
                self.state = 103
                self.conditionalSwitch()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitDeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(TotalPearParser.TypeContext,0)


        def IDENTIFIER(self):
            return self.getToken(TotalPearParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(TotalPearParser.ExpressionContext,0)


        def inputStatement(self):
            return self.getTypedRuleContext(TotalPearParser.InputStatementContext,0)


        def getRuleIndex(self):
            return TotalPearParser.RULE_initDeclare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitDeclare" ):
                listener.enterInitDeclare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitDeclare" ):
                listener.exitInitDeclare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitDeclare" ):
                return visitor.visitInitDeclare(self)
            else:
                return visitor.visitChildren(self)




    def initDeclare(self):

        localctx = TotalPearParser.InitDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_initDeclare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.type_()
            self.state = 107
            self.match(TotalPearParser.IDENTIFIER)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 108
                self.match(TotalPearParser.T__0)
                self.state = 111
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4, 8, 12, 13, 41, 43, 45, 46]:
                    self.state = 109
                    self.expression()
                    pass
                elif token in [40]:
                    self.state = 110
                    self.inputStatement()
                    pass
                else:
                    raise NoViableAltException(self)



            self.state = 115
            self.match(TotalPearParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mathPolynomial(self):
            return self.getTypedRuleContext(TotalPearParser.MathPolynomialContext,0)


        def logicalExpression(self):
            return self.getTypedRuleContext(TotalPearParser.LogicalExpressionContext,0)


        def getRuleIndex(self):
            return TotalPearParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = TotalPearParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expression)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.mathPolynomial()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.logicalExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MathPolynomialContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mathMonomial(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TotalPearParser.MathMonomialContext)
            else:
                return self.getTypedRuleContext(TotalPearParser.MathMonomialContext,i)


        def getRuleIndex(self):
            return TotalPearParser.RULE_mathPolynomial

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMathPolynomial" ):
                listener.enterMathPolynomial(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMathPolynomial" ):
                listener.exitMathPolynomial(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMathPolynomial" ):
                return visitor.visitMathPolynomial(self)
            else:
                return visitor.visitChildren(self)




    def mathPolynomial(self):

        localctx = TotalPearParser.MathPolynomialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mathPolynomial)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.mathMonomial()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3 or _la==4:
                self.state = 122
                _la = self._input.LA(1)
                if not(_la==3 or _la==4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 123
                self.mathMonomial()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MathMonomialContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mathPrimary1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TotalPearParser.MathPrimary1Context)
            else:
                return self.getTypedRuleContext(TotalPearParser.MathPrimary1Context,i)


        def getRuleIndex(self):
            return TotalPearParser.RULE_mathMonomial

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMathMonomial" ):
                listener.enterMathMonomial(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMathMonomial" ):
                listener.exitMathMonomial(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMathMonomial" ):
                return visitor.visitMathMonomial(self)
            else:
                return visitor.visitChildren(self)




    def mathMonomial(self):

        localctx = TotalPearParser.MathMonomialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mathMonomial)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.mathPrimary1()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==6:
                self.state = 130
                _la = self._input.LA(1)
                if not(_la==5 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 131
                self.mathPrimary1()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MathPrimary1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mathPrimary2(self):
            return self.getTypedRuleContext(TotalPearParser.MathPrimary2Context,0)


        def getRuleIndex(self):
            return TotalPearParser.RULE_mathPrimary1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMathPrimary1" ):
                listener.enterMathPrimary1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMathPrimary1" ):
                listener.exitMathPrimary1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMathPrimary1" ):
                return visitor.visitMathPrimary1(self)
            else:
                return visitor.visitChildren(self)




    def mathPrimary1(self):

        localctx = TotalPearParser.MathPrimary1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_mathPrimary1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 137
                self.match(TotalPearParser.T__3)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 143
            self.mathPrimary2()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MathPrimary2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mathPrimary3(self):
            return self.getTypedRuleContext(TotalPearParser.MathPrimary3Context,0)


        def mathPrimary1(self):
            return self.getTypedRuleContext(TotalPearParser.MathPrimary1Context,0)


        def getRuleIndex(self):
            return TotalPearParser.RULE_mathPrimary2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMathPrimary2" ):
                listener.enterMathPrimary2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMathPrimary2" ):
                listener.exitMathPrimary2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMathPrimary2" ):
                return visitor.visitMathPrimary2(self)
            else:
                return visitor.visitChildren(self)




    def mathPrimary2(self):

        localctx = TotalPearParser.MathPrimary2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_mathPrimary2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.mathPrimary3()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 146
                self.match(TotalPearParser.T__6)
                self.state = 147
                self.mathPrimary1()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MathPrimary3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(TotalPearParser.IDENTIFIER, 0)

        def uint(self):
            return self.getTypedRuleContext(TotalPearParser.UintContext,0)


        def ufloat(self):
            return self.getTypedRuleContext(TotalPearParser.UfloatContext,0)


        def mathPolynomial(self):
            return self.getTypedRuleContext(TotalPearParser.MathPolynomialContext,0)


        def getRuleIndex(self):
            return TotalPearParser.RULE_mathPrimary3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMathPrimary3" ):
                listener.enterMathPrimary3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMathPrimary3" ):
                listener.exitMathPrimary3(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMathPrimary3" ):
                return visitor.visitMathPrimary3(self)
            else:
                return visitor.visitChildren(self)




    def mathPrimary3(self):

        localctx = TotalPearParser.MathPrimary3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_mathPrimary3)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [43]:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.match(TotalPearParser.IDENTIFIER)
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.uint()
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 3)
                self.state = 152
                self.ufloat()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 153
                self.match(TotalPearParser.T__7)
                self.state = 154
                self.mathPolynomial()
                self.state = 155
                self.match(TotalPearParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TotalPearParser.Logical2Context)
            else:
                return self.getTypedRuleContext(TotalPearParser.Logical2Context,i)


        def getRuleIndex(self):
            return TotalPearParser.RULE_logicalExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalExpression" ):
                listener.enterLogicalExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalExpression" ):
                listener.exitLogicalExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalExpression" ):
                return visitor.visitLogicalExpression(self)
            else:
                return visitor.visitChildren(self)




    def logicalExpression(self):

        localctx = TotalPearParser.LogicalExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_logicalExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.logical2()
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 160
                self.match(TotalPearParser.T__9)
                self.state = 161
                self.logical2()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical3(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TotalPearParser.Logical3Context)
            else:
                return self.getTypedRuleContext(TotalPearParser.Logical3Context,i)


        def getRuleIndex(self):
            return TotalPearParser.RULE_logical2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical2" ):
                listener.enterLogical2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical2" ):
                listener.exitLogical2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical2" ):
                return visitor.visitLogical2(self)
            else:
                return visitor.visitChildren(self)




    def logical2(self):

        localctx = TotalPearParser.Logical2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_logical2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.logical3()
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 168
                self.match(TotalPearParser.T__10)
                self.state = 169
                self.logical3()
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
